# flask_Captchaify

./: .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README3.md  SECURITY.md  app.py  ddosify.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  services.py  setup.py  update-ipset.py
.github/workflows/: FUNDING.yml  python-package.yml  python-publish.yml  update_ipset.yml
data/: languages.json
examples/: advanced_rules.py
flask_Humanify/: __init__.py  ipset.py  utils.py
flask_Humanify/templates/: access_denied.html  rate_limited.html
flask_humanify/: __init__.py  humanify.py  ipset.py  memory_server.py  utils.py
flask_humanify/features/: error_handler.py  rate_limiter.py
flask_humanify/templates/: access_denied.html  audio_challenge.html  exception.html  grid_challenge.html  one_click_challenge.html  oneclick_captcha.html  rate_limited.html
src/: __init__.py
src/flask_Captchaify/: Captchaify.py  __init__.py  altcha.py  cryptograph.py  ddosify.py  embed.py  flask_Captchaify.py  req_info.py  trueclick.py  utils.py  webtoolbox.py
src/flask_Captchaify/assets/: emojis.json  languages.json  tea_emojis.json  trueclick-min.js
src/flask_Captchaify/datasets/: ai_images.py  animals.py  keys.py  oneclick_keys.py  requirements.txt  searched_images.py  utils.py
src/flask_Captchaify/templates/: block.html  blocked.html  captcha.html  (+15 more)
src/flask_DDoSify/: ddosify.py  tools.py
src/templates/: block.html
templates/: block.html  captcha.html  changelanguage.html  ratelimited.html
(+25 files in other folders)
