[project]
name = "flask-Humanify"
version = "0.1.3.2"
description = "Protect against bots and DDoS attacks"
readme = "README.md"
authors = [
    {name = "TN3W", email = "tn3w@protonmail.com"}
]
license = "Apache-2.0"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["Flask", "netaddr"]

[project.urls]
Homepage = "https://github.com/tn3w/flask-Humanify"
Documentation = "https://github.com/tn3w/flask-Humanify"
Repository = "https://github.com/tn3w/flask-Humanify.git"
Issues = "https://github.com/tn3w/flask-Humanify/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flask_humanify"]
include-package-data = true